// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Code Generator - Snapshot Tests (Intermediate Data) > should produce consistent base styles 1`] = `
{
  "parsed": {
    "borderRadius": 0,
    "fillVariable": null,
    "fontSize": 13,
    "hasBorder": true,
    "textVariable": "text-color-label",
  },
  "raw": "m-0 w-auto p-0 rounded-none bg-transparent border-none font-mono text-sm leading-[20px] text-label",
}
`;

exports[`Code Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "baseStyles": {
    "parsed": {
      "borderRadius": 0,
      "fillVariable": null,
      "fontSize": 13,
      "hasBorder": true,
      "textVariable": "text-color-label",
    },
    "raw": "m-0 w-auto p-0 rounded-none bg-transparent border-none font-mono text-sm leading-[20px] text-label",
  },
  "langConfig": {
    "default": "ts",
    "descriptions": {
      "bash": "Shell/Bash commands",
      "css": "CSS styles",
      "jsonc": "JSON with comments",
      "ts": "TypeScript code",
      "tsx": "TypeScript JSX code",
    },
    "values": [
      "ts",
      "tsx",
      "jsonc",
      "bash",
      "css",
    ],
  },
  "variants": [
    {
      "description": "TypeScript code",
      "lang": "ts",
    },
    {
      "description": "TypeScript JSX code",
      "lang": "tsx",
    },
    {
      "description": "JSON with comments",
      "lang": "jsonc",
    },
    {
      "description": "Shell/Bash commands",
      "lang": "bash",
    },
    {
      "description": "CSS styles",
      "lang": "css",
    },
  ],
}
`;

exports[`Code Generator - Snapshot Tests (Intermediate Data) > should produce consistent lang config from registry 1`] = `
{
  "default": "ts",
  "descriptions": {
    "bash": "Shell/Bash commands",
    "css": "CSS styles",
    "jsonc": "JSON with comments",
    "ts": "TypeScript code",
    "tsx": "TypeScript JSX code",
  },
  "values": [
    "ts",
    "tsx",
    "jsonc",
    "bash",
    "css",
  ],
}
`;
